pkg/crate/libzt/src/libzt.rs

extern "C" {
    #[doc = " @brief Receive data from remote host"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param buf Pointer to data buffer"]
    #[doc = " @param len Length of data buffer"]
    #[doc = " @param flags Specifies the type of message receipt"]
    #[doc = " @param addr Destination address buffer"]
    #[doc = " @param addrlen Length of destination address buffer"]
    #[doc = " @return Number of bytes received if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_recvfrom(
        fd: ::std::os::raw::c_int,
        buf: *mut ::std::os::raw::c_void,
        len: size_t,
        flags: ::std::os::raw::c_int,
        addr: *mut zts_sockaddr,
        addrlen: *mut zts_socklen_t,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Receive a message from remote host"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param msg Message that was received"]
    #[doc = " @param flags Specifies the type of message receipt"]
    #[doc = " @return Number of bytes received if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_recvmsg(
        fd: ::std::os::raw::c_int,
        msg: *mut zts_msghdr,
        flags: ::std::os::raw::c_int,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Read data from socket onto buffer"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param buf Pointer to data buffer"]
    #[doc = " @param len Length of data buffer to receive data"]
    #[doc = " @return Number of bytes read if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_read(
        fd: ::std::os::raw::c_int,
        buf: *mut ::std::os::raw::c_void,
        len: size_t,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Read data from socket into multiple buffers"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param iov Array of destination buffers"]
    #[doc = " @param iovcnt Number of buffers to read into"]
    #[doc = " @return Number of bytes read if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_readv(
        fd: ::std::os::raw::c_int,
        iov: *const zts_iovec,
        iovcnt: ::std::os::raw::c_int,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Write data from buffer to socket"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param buf Pointer to data buffer"]
    #[doc = " @param len Length of buffer to write"]
    #[doc = " @return Number of bytes written if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_write(
        fd: ::std::os::raw::c_int,
        buf: *const ::std::os::raw::c_void,
        len: size_t,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Write data from multiple buffers to socket."]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param iov Array of source buffers"]
    #[doc = " @param iovcnt Number of buffers to read from"]
    #[doc = " @return Number of bytes written if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_writev(
        fd: ::std::os::raw::c_int,
        iov: *const zts_iovec,
        iovcnt: ::std::os::raw::c_int,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Shut down some aspect of a socket"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param how Which aspects of the socket should be shut down. Options are `ZTS_SHUT_RD`,"]
    #[doc = " `ZTS_SHUT_WR`, or `ZTS_SHUT_RDWR`."]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_shutdown(
        fd: ::std::os::raw::c_int,
        how: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Create a socket"]
    #[doc = ""]
    #[doc = " @param family `ZTS_AF_INET` or `ZTS_AF_INET6`"]
    #[doc = " @param type `ZTS_SOCK_STREAM` or `ZTS_SOCK_DGRAM`"]
    #[doc = " @param protocol Protocols supported on this socket"]
    #[doc = " @return Numbered file descriptor on success, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_socket(
        family: ::std::os::raw::c_int,
        type_: ::std::os::raw::c_int,
        protocol: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Connect a socket to a remote host"]
    #[doc = ""]
    #[doc = " This convenience function exists because ZeroTier uses transport-triggered"]
    #[doc = " links. This means that links between peers do not exist until peers try to"]
    #[doc = " talk to each other. This can be a problem during connection procedures since"]
    #[doc = " some of the initial packets are lost. To alleviate the need to try"]
    #[doc = " `zts_bsd_connect` many times, this function will keep re-trying for you, even if"]
    #[doc = " no known routes exist. However, if the socket is set to `non-blocking` mode"]
    #[doc = " it will behave identically to `zts_bsd_connect` and return immediately upon"]
    #[doc = " failure."]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param ipstr Human-readable IP string"]
    #[doc = " @param port Port"]
    #[doc = " @param timeout_ms (Approximate) amount of time in milliseconds before"]
    #[doc = "     connection attempt is aborted. Will block for `30 seconds` if timeout is"]
    #[doc = "     set to `0`."]
    #[doc = ""]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SOCKET` if the function times"]
    #[doc = "     out with no connection made, `ZTS_ERR_SERVICE` if the node experiences a"]
    #[doc = "     problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_connect(
        fd: ::std::os::raw::c_int,
        ipstr: *const ::std::os::raw::c_char,
        port: ::std::os::raw::c_ushort,
        timeout_ms: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Bind a socket to a local address"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param ipstr Human-readable IP string"]
    #[doc = " @param port Port"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bind(
        fd: ::std::os::raw::c_int,
        ipstr: *const ::std::os::raw::c_char,
        port: ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Listen for incoming connections on socket"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param backlog Number of backlogged connections allowed"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_listen(
        fd: ::std::os::raw::c_int,
        backlog: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Accept an incoming connection"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param remote_addr Buffer that will receive remote host IP string"]
    #[doc = " @param len Size of buffer that will receive remote host IP string"]
    #[doc = "     (must be exactly `ZTS_IP_MAX_STR_LEN`)"]
    #[doc = " @param port Port number of the newly connected remote host (value-result)"]
    #[doc = " @return New file descriptor if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_accept(
        fd: ::std::os::raw::c_int,
        remote_addr: *mut ::std::os::raw::c_char,
        len: ::std::os::raw::c_int,
        port: *mut ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Send data to remote host"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param buf Pointer to data buffer"]
    #[doc = " @param len Length of data to write"]
    #[doc = " @param flags (e.g. `ZTS_MSG_DONTWAIT`, `ZTS_MSG_MORE`)"]
    #[doc = " @return Number of bytes sent if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_send(
        fd: ::std::os::raw::c_int,
        buf: *const ::std::os::raw::c_void,
        len: size_t,
        flags: ::std::os::raw::c_int,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Receive data from remote host"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param buf Pointer to data buffer"]
    #[doc = " @param len Length of data buffer"]
    #[doc = " @param flags Specifies the type of message receipt"]
    #[doc = " @return Number of bytes received if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_recv(
        fd: ::std::os::raw::c_int,
        buf: *mut ::std::os::raw::c_void,
        len: size_t,
        flags: ::std::os::raw::c_int,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Read data from socket onto buffer"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param buf Pointer to data buffer"]
    #[doc = " @param len Length of data buffer to receive data"]
    #[doc = " @return Number of bytes read if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_read(
        fd: ::std::os::raw::c_int,
        buf: *mut ::std::os::raw::c_void,
        len: size_t,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Write data from buffer to socket"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param buf Pointer to data buffer"]
    #[doc = " @param len Length of buffer to write"]
    #[doc = " @return Number of bytes written if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_write(
        fd: ::std::os::raw::c_int,
        buf: *const ::std::os::raw::c_void,
        len: size_t,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Shut down `read` aspect of a socket"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_shutdown_rd(fd: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Shut down `write` aspect of a socket"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_shutdown_wr(fd: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
